Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     height:200px;
     background-color:red;
     border:dotted;
-    padding:0px;
+    padding:100px;
+    margin:75px;
 }
 card{
     width:400px;
